--- a/STM32L476RGT6/STM32L476RGT6.ioc
+++ b/STM32L476RGT6/STM32L476RGT6.ioc
@@ -1,24 +1,49 @@
 #MicroXplorer Configuration settings - do not modify
+ADC1.Channel-0\#ChannelRegularConversion=ADC_CHANNEL_1
+ADC1.CommonPathInternal=null|null|null|null
+ADC1.ContinuousConvMode=ENABLE
+ADC1.IPParameters=Rank-0\#ChannelRegularConversion,master,Channel-0\#ChannelRegularConversion,SamplingTime-0\#ChannelRegularConversion,OffsetNumber-0\#ChannelRegularConversion,NbrOfConversionFlag,ContinuousConvMode,CommonPathInternal
+ADC1.NbrOfConversionFlag=1
+ADC1.OffsetNumber-0\#ChannelRegularConversion=ADC_OFFSET_NONE
+ADC1.Rank-0\#ChannelRegularConversion=1
+ADC1.SamplingTime-0\#ChannelRegularConversion=ADC_SAMPLETIME_2CYCLES_5
+ADC1.master=1
 CAD.formats=
 CAD.pinconfig=
 CAD.provider=
+Dma.ADC1.0.Direction=DMA_PERIPH_TO_MEMORY
+Dma.ADC1.0.Instance=DMA1_Channel1
+Dma.ADC1.0.MemDataAlignment=DMA_MDATAALIGN_HALFWORD
+Dma.ADC1.0.MemInc=DMA_MINC_ENABLE
+Dma.ADC1.0.Mode=DMA_NORMAL
+Dma.ADC1.0.PeriphDataAlignment=DMA_PDATAALIGN_HALFWORD
+Dma.ADC1.0.PeriphInc=DMA_PINC_DISABLE
+Dma.ADC1.0.Priority=DMA_PRIORITY_LOW
+Dma.ADC1.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority
+Dma.Request0=ADC1
+Dma.RequestsNb=1
 File.Version=6
 GPIO.groupedBy=Group By Peripherals
+I2C1.IPParameters=Timing
+I2C1.Timing=0x10D19CE4
 I2C2.IPParameters=Timing
 I2C2.Timing=0x10D19CE4
 KeepUserPlacement=false
 Mcu.CPN=STM32L476RGT6
 Mcu.Family=STM32L4
-Mcu.IP0=I2C2
-Mcu.IP1=NVIC
-Mcu.IP2=RCC
-Mcu.IP3=RTC
-Mcu.IP4=SPI1
-Mcu.IP5=SPI3
-Mcu.IP6=SYS
-Mcu.IP7=USB_DEVICE
-Mcu.IP8=USB_OTG_FS
-Mcu.IPNb=9
+Mcu.IP0=ADC1
+Mcu.IP1=DMA
+Mcu.IP10=USB_DEVICE
+Mcu.IP11=USB_OTG_FS
+Mcu.IP2=I2C1
+Mcu.IP3=I2C2
+Mcu.IP4=NVIC
+Mcu.IP5=RCC
+Mcu.IP6=RTC
+Mcu.IP7=SPI1
+Mcu.IP8=SPI3
+Mcu.IP9=SYS
+Mcu.IPNb=12
 Mcu.Name=STM32L476R(C-E-G)Tx
 Mcu.Package=LQFP64
 Mcu.Pin0=PC14-OSC32_IN (PC14)
@@ -32,24 +57,27 @@ Mcu.Pin15=PC10
 Mcu.Pin16=PC11
 Mcu.Pin17=PC12
 Mcu.Pin18=PB3 (JTDO-TRACESWO)
-Mcu.Pin19=VP_RTC_VS_RTC_Activate
+Mcu.Pin19=PB6
 Mcu.Pin2=PH0-OSC_IN (PH0)
-Mcu.Pin20=VP_SYS_VS_Systick
-Mcu.Pin21=VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS
+Mcu.Pin20=PB7
+Mcu.Pin21=VP_RTC_VS_RTC_Activate
+Mcu.Pin22=VP_SYS_VS_Systick
+Mcu.Pin23=VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS
 Mcu.Pin3=PH1-OSC_OUT (PH1)
-Mcu.Pin4=PA4
+Mcu.Pin4=PC0
 Mcu.Pin5=PA5
 Mcu.Pin6=PA6
 Mcu.Pin7=PA7
 Mcu.Pin8=PB10
 Mcu.Pin9=PB11
-Mcu.PinsNb=22
+Mcu.PinsNb=24
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32L476RGTx
-MxCube.Version=6.13.0
-MxDb.Version=DB.6.0.130
+MxCube.Version=6.14.0
+MxDb.Version=DB.6.0.140
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
+NVIC.DMA1_Channel1_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
@@ -71,8 +99,6 @@ PA14\ (JTCK-SWCLK).Mode=Trace_Asynchronous_SW
 PA14\ (JTCK-SWCLK).Signal=SYS_JTCK-SWCLK
 PA15\ (JTDI).Mode=NSS_Signal_Hard_Output
 PA15\ (JTDI).Signal=SPI3_NSS
-PA4.Mode=NSS_Signal_Hard_Output
-PA4.Signal=SPI1_NSS
 PA5.Mode=Full_Duplex_Master
 PA5.Signal=SPI1_SCK
 PA6.Mode=Full_Duplex_Master
@@ -85,6 +111,11 @@ PB11.Mode=I2C
 PB11.Signal=I2C2_SDA
 PB3\ (JTDO-TRACESWO).Mode=Trace_Asynchronous_SW
 PB3\ (JTDO-TRACESWO).Signal=SYS_JTDO-SWO
+PB6.Mode=I2C
+PB6.Signal=I2C1_SCL
+PB7.Mode=I2C
+PB7.Signal=I2C1_SDA
+PC0.Signal=ADCx_IN1
 PC10.Mode=Full_Duplex_Master
 PC10.Signal=SPI3_SCK
 PC11.Mode=Full_Duplex_Master
@@ -102,6 +133,7 @@ PH1-OSC_OUT\ (PH1).Signal=RCC_OSC_OUT
 PinOutPanel.RotationAngle=0
 ProjectManager.AskForMigrate=true
 ProjectManager.BackupPrevious=false
+ProjectManager.CompilerLinker=GCC
 ProjectManager.CompilerOptimize=6
 ProjectManager.ComputerToolchain=false
 ProjectManager.CoupleFile=false
@@ -115,7 +147,7 @@ ProjectManager.HalAssertFull=false
 ProjectManager.HeapSize=0x200
 ProjectManager.KeepUserCode=true
 ProjectManager.LastFirmware=true
-ProjectManager.LibraryCopy=0
+ProjectManager.LibraryCopy=1
 ProjectManager.MainLocation=Core/Src
 ProjectManager.NoMain=false
 ProjectManager.PreviousToolchain=
@@ -125,12 +157,12 @@ ProjectManager.ProjectName=STM32L476RGT6
 ProjectManager.ProjectStructure=
 ProjectManager.RegisterCallBack=
 ProjectManager.StackSize=0x400
-ProjectManager.TargetToolchain=EWARM V8.32
+ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
-ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=
+ProjectManager.UnderRoot=true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_I2C2_Init-I2C2-false-HAL-true,5-MX_RTC_Init-RTC-false-HAL-true,6-MX_SPI1_Init-SPI1-false-HAL-true,7-MX_SPI3_Init-SPI3-false-HAL-true,8-MX_USB_DEVICE_Init-USB_DEVICE-false-HAL-false,9-MX_ADC1_Init-ADC1-false-HAL-true,10-MX_I2C1_Init-I2C1-false-HAL-true
 RCC.ADCFreq_Value=48000000
 RCC.AHBFreq_Value=80000000
 RCC.APB1Freq_Value=80000000
@@ -142,11 +174,12 @@ RCC.DFSDMFreq_Value=80000000
 RCC.FCLKCortexFreq_Value=80000000
 RCC.FamilyName=M
 RCC.HCLKFreq_Value=80000000
+RCC.HSE_VALUE=16000000
 RCC.HSI_VALUE=16000000
 RCC.I2C1Freq_Value=80000000
 RCC.I2C2Freq_Value=80000000
 RCC.I2C3Freq_Value=80000000
-RCC.IPParameters=ADCFreq_Value,AHBFreq_Value,APB1Freq_Value,APB1TimFreq_Value,APB2Freq_Value,APB2TimFreq_Value,CortexFreq_Value,DFSDMFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,HSI_VALUE,I2C1Freq_Value,I2C2Freq_Value,I2C3Freq_Value,LCDFreq_Value,LPTIM1Freq_Value,LPTIM2Freq_Value,LPUART1Freq_Value,LSCOPinFreq_Value,LSI_VALUE,MCO1PinFreq_Value,MSI_VALUE,PLLN,PLLPoutputFreq_Value,PLLQoutputFreq_Value,PLLRCLKFreq_Value,PLLSAI1N,PLLSAI1PoutputFreq_Value,PLLSAI1QoutputFreq_Value,PLLSAI1RoutputFreq_Value,PLLSAI2PoutputFreq_Value,PLLSAI2RoutputFreq_Value,PLLSourceVirtual,PWRFreq_Value,RNGFreq_Value,RTCClockSelection,RTCFreq_Value,SAI1Freq_Value,SAI2Freq_Value,SDMMCFreq_Value,SWPMI1Freq_Value,SYSCLKFreq_VALUE,SYSCLKSource,UART4Freq_Value,UART5Freq_Value,USART1Freq_Value,USART2Freq_Value,USART3Freq_Value,USBFreq_Value,VCOInputFreq_Value,VCOOutputFreq_Value,VCOSAI1OutputFreq_Value,VCOSAI2OutputFreq_Value
+RCC.IPParameters=ADCFreq_Value,AHBFreq_Value,APB1Freq_Value,APB1TimFreq_Value,APB2Freq_Value,APB2TimFreq_Value,CortexFreq_Value,DFSDMFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,HSE_VALUE,HSI_VALUE,I2C1Freq_Value,I2C2Freq_Value,I2C3Freq_Value,LCDFreq_Value,LPTIM1Freq_Value,LPTIM2Freq_Value,LPUART1Freq_Value,LSCOPinFreq_Value,LSI_VALUE,MCO1PinFreq_Value,MSI_VALUE,PLLN,PLLPoutputFreq_Value,PLLQoutputFreq_Value,PLLRCLKFreq_Value,PLLSAI1N,PLLSAI1PoutputFreq_Value,PLLSAI1Q,PLLSAI1QoutputFreq_Value,PLLSAI1R,PLLSAI1RoutputFreq_Value,PLLSAI2PoutputFreq_Value,PLLSAI2RoutputFreq_Value,PLLSourceVirtual,PWRFreq_Value,RNGFreq_Value,RTCClockSelection,RTCFreq_Value,SAI1Freq_Value,SAI2Freq_Value,SDMMCFreq_Value,SWPMI1Freq_Value,SYSCLKFreq_VALUE,SYSCLKSource,UART4Freq_Value,UART5Freq_Value,USART1Freq_Value,USART2Freq_Value,USART3Freq_Value,USBFreq_Value,VCOInputFreq_Value,VCOOutputFreq_Value,VCOSAI1OutputFreq_Value,VCOSAI2OutputFreq_Value
 RCC.LCDFreq_Value=32768
 RCC.LPTIM1Freq_Value=80000000
 RCC.LPTIM2Freq_Value=80000000
@@ -155,23 +188,25 @@ RCC.LSCOPinFreq_Value=32000
 RCC.LSI_VALUE=32000
 RCC.MCO1PinFreq_Value=80000000
 RCC.MSI_VALUE=4000000
-RCC.PLLN=20
+RCC.PLLN=10
 RCC.PLLPoutputFreq_Value=22857142.85714286
 RCC.PLLQoutputFreq_Value=80000000
 RCC.PLLRCLKFreq_Value=80000000
 RCC.PLLSAI1N=12
-RCC.PLLSAI1PoutputFreq_Value=13714285.714285715
+RCC.PLLSAI1PoutputFreq_Value=27428571.42857143
+RCC.PLLSAI1Q=RCC_PLLQ_DIV4
 RCC.PLLSAI1QoutputFreq_Value=48000000
+RCC.PLLSAI1R=RCC_PLLR_DIV4
 RCC.PLLSAI1RoutputFreq_Value=48000000
-RCC.PLLSAI2PoutputFreq_Value=9142857.142857144
-RCC.PLLSAI2RoutputFreq_Value=32000000
+RCC.PLLSAI2PoutputFreq_Value=18285714.285714287
+RCC.PLLSAI2RoutputFreq_Value=64000000
 RCC.PLLSourceVirtual=RCC_PLLSOURCE_HSE
 RCC.PWRFreq_Value=80000000
 RCC.RNGFreq_Value=48000000
 RCC.RTCClockSelection=RCC_RTCCLKSOURCE_LSE
 RCC.RTCFreq_Value=32768
-RCC.SAI1Freq_Value=13714285.714285715
-RCC.SAI2Freq_Value=13714285.714285715
+RCC.SAI1Freq_Value=27428571.42857143
+RCC.SAI2Freq_Value=27428571.42857143
 RCC.SDMMCFreq_Value=48000000
 RCC.SWPMI1Freq_Value=80000000
 RCC.SYSCLKFreq_VALUE=80000000
@@ -182,19 +217,22 @@ RCC.USART1Freq_Value=80000000
 RCC.USART2Freq_Value=80000000
 RCC.USART3Freq_Value=80000000
 RCC.USBFreq_Value=48000000
-RCC.VCOInputFreq_Value=8000000
+RCC.VCOInputFreq_Value=16000000
 RCC.VCOOutputFreq_Value=160000000
-RCC.VCOSAI1OutputFreq_Value=96000000
-RCC.VCOSAI2OutputFreq_Value=64000000
+RCC.VCOSAI1OutputFreq_Value=192000000
+RCC.VCOSAI2OutputFreq_Value=128000000
+SH.ADCx_IN1.0=ADC1_IN1,IN1-Single-Ended
+SH.ADCx_IN1.ConfNb=1
+SPI1.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_2
 SPI1.CalculateBaudRate=40.0 MBits/s
 SPI1.Direction=SPI_DIRECTION_2LINES
-SPI1.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,VirtualNSS
+SPI1.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,BaudRatePrescaler
 SPI1.Mode=SPI_MODE_MASTER
-SPI1.VirtualNSS=VM_NSSHARD
 SPI1.VirtualType=VM_MASTER
+SPI3.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_2
 SPI3.CalculateBaudRate=40.0 MBits/s
 SPI3.Direction=SPI_DIRECTION_2LINES
-SPI3.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,VirtualNSS
+SPI3.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,VirtualNSS,BaudRatePrescaler
 SPI3.Mode=SPI_MODE_MASTER
 SPI3.VirtualNSS=VM_NSSHARD
 SPI3.VirtualType=VM_MASTER
