mac: dw3000 sending works, with IRQ interruption.

--- a/STM32F722/DW3000/DW3000_op/DW3000_op/DW3000_op.ioc
+++ b/STM32F722/DW3000/DW3000_op/DW3000_op/DW3000_op.ioc
@@ -84,8 +84,9 @@ PA13.Mode=Serial_Wire
 PA13.Signal=SYS_JTMS-SWDIO
 PA14.Mode=Serial_Wire
 PA14.Signal=SYS_JTCK-SWCLK
-PA2.GPIOParameters=GPIO_Label
+PA2.GPIOParameters=GPIO_Label,GPIO_ModeDefaultEXTI
 PA2.GPIO_Label=UWB_IRQ
+PA2.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_RISING
 PA2.Locked=true
 PA2.Signal=GPXTI2
 PA3.GPIOParameters=GPIO_Label
