mac: corrected SPI2_CLK pin and now it works with microsd card without hardware modification.

--- a/STM32F722/microsd_spi_fatfs/microsd_spi_fatfs/microsd_spi_fatfs.ioc
+++ b/STM32F722/microsd_spi_fatfs/microsd_spi_fatfs/microsd_spi_fatfs.ioc
@@ -33,7 +33,7 @@ Mcu.Pin4=PC1
 Mcu.Pin5=PC2
 Mcu.Pin6=PC4
 Mcu.Pin7=PB0
-Mcu.Pin8=PB10
+Mcu.Pin8=PB13
 Mcu.Pin9=PC6
 Mcu.PinsNb=17
 Mcu.ThirdPartyNb=0
@@ -65,11 +65,12 @@ PB0.GPIOParameters=GPIO_Label
 PB0.GPIO_Label=PIN_LED1
 PB0.Locked=true
 PB0.Signal=GPIO_Output
-PB10.GPIOParameters=GPIO_Speed,GPIO_PuPd
-PB10.GPIO_PuPd=GPIO_PULLUP
-PB10.GPIO_Speed=GPIO_SPEED_FREQ_LOW
-PB10.Mode=Full_Duplex_Master
-PB10.Signal=SPI2_SCK
+PB13.GPIOParameters=GPIO_Speed,GPIO_PuPd
+PB13.GPIO_PuPd=GPIO_PULLUP
+PB13.GPIO_Speed=GPIO_SPEED_FREQ_LOW
+PB13.Locked=true
+PB13.Mode=Full_Duplex_Master
+PB13.Signal=SPI2_SCK
 PC1.GPIOParameters=GPIO_Speed,GPIO_PuPd
 PC1.GPIO_PuPd=GPIO_PULLUP
 PC1.GPIO_Speed=GPIO_SPEED_FREQ_LOW
