mac: start working on the ADS131M04 DMA read and store data in MicroSD card. SD working stably.

--- a/STM32F722/ADS131M04/ADS131M04_DMA_MicroSD/ADS131M04_DMA_MicroSD.ioc
+++ b/STM32F722/ADS131M04/ADS131M04_DMA_MicroSD/ADS131M04_DMA_MicroSD.ioc
@@ -120,6 +120,8 @@ PB0.GPIOParameters=GPIO_Label
 PB0.GPIO_Label=PIN_LED1
 PB0.Locked=true
 PB0.Signal=GPIO_Output
+PB13.GPIOParameters=GPIO_PuPd
+PB13.GPIO_PuPd=GPIO_PULLUP
 PB13.Locked=true
 PB13.Mode=Full_Duplex_Master
 PB13.Signal=SPI2_SCK
@@ -147,6 +149,8 @@ PC0.GPIO_Label=ADS_CS
 PC0.GPIO_PuPd=GPIO_PULLUP
 PC0.Locked=true
 PC0.Signal=GPIO_Output
+PC1.GPIOParameters=GPIO_PuPd
+PC1.GPIO_PuPd=GPIO_PULLUP
 PC1.Mode=Full_Duplex_Master
 PC1.Signal=SPI2_MOSI
 PC11.Mode=Full_Duplex_Master
@@ -158,6 +162,8 @@ PC14-OSC32_IN.Mode=LSE-External-Oscillator
 PC14-OSC32_IN.Signal=RCC_OSC32_IN
 PC15-OSC32_OUT.Mode=LSE-External-Oscillator
 PC15-OSC32_OUT.Signal=RCC_OSC32_OUT
+PC2.GPIOParameters=GPIO_PuPd
+PC2.GPIO_PuPd=GPIO_PULLUP
 PC2.Mode=Full_Duplex_Master
 PC2.Signal=SPI2_MISO
 PC3.GPIOParameters=GPIO_PuPd,GPIO_Label
