mac: seis_ADS_microSD the SD part working.

--- a/STM32F722/ADS131M04/seis_ADS131M04_DMA_MicroSD/seis_ADS131M04_DMA_MicroSD.ioc
+++ b/STM32F722/ADS131M04/seis_ADS131M04_DMA_MicroSD/seis_ADS131M04_DMA_MicroSD.ioc
@@ -153,6 +153,8 @@ PB1.GPIOParameters=GPIO_Label
 PB1.GPIO_Label=SD_CD
 PB1.Locked=true
 PB1.Signal=GPIO_Input
+PB10.GPIOParameters=GPIO_PuPd
+PB10.GPIO_PuPd=GPIO_PULLUP
 PB10.Locked=true
 PB10.Mode=Full_Duplex_Master
 PB10.Signal=SPI2_SCK
@@ -184,6 +186,8 @@ PC0.GPIO_Label=ADS_CS
 PC0.GPIO_PuPd=GPIO_PULLUP
 PC0.Locked=true
 PC0.Signal=GPIO_Output
+PC1.GPIOParameters=GPIO_PuPd
+PC1.GPIO_PuPd=GPIO_PULLUP
 PC1.Mode=Full_Duplex_Master
 PC1.Signal=SPI2_MOSI
 PC11.Mode=Full_Duplex_Master
@@ -195,6 +199,8 @@ PC14-OSC32_IN.Mode=LSE-External-Oscillator
 PC14-OSC32_IN.Signal=RCC_OSC32_IN
 PC15-OSC32_OUT.Mode=LSE-External-Oscillator
 PC15-OSC32_OUT.Signal=RCC_OSC32_OUT
+PC2.GPIOParameters=GPIO_PuPd
+PC2.GPIO_PuPd=GPIO_PULLUP
 PC2.Mode=Full_Duplex_Master
 PC2.Signal=SPI2_MISO
 PC3.GPIOParameters=GPIO_PuPd,GPIO_Label
@@ -327,10 +333,11 @@ SPI1.Direction=SPI_DIRECTION_2LINES
 SPI1.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,BaudRatePrescaler,DataSize
 SPI1.Mode=SPI_MODE_MASTER
 SPI1.VirtualType=VM_MASTER
-SPI2.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_32
-SPI2.CalculateBaudRate=1.5 MBits/s
+SPI2.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_16
+SPI2.CalculateBaudRate=3.0 MBits/s
+SPI2.DataSize=SPI_DATASIZE_8BIT
 SPI2.Direction=SPI_DIRECTION_2LINES
-SPI2.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,BaudRatePrescaler
+SPI2.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,BaudRatePrescaler,DataSize
 SPI2.Mode=SPI_MODE_MASTER
 SPI2.VirtualType=VM_MASTER
 SPI3.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_4
