mac: seis_ADS_microSD working.

--- a/STM32F722/ADS131M04/seis_ADS131M04_DMA_MicroSD/seis_ADS131M04_DMA_MicroSD.ioc
+++ b/STM32F722/ADS131M04/seis_ADS131M04_DMA_MicroSD/seis_ADS131M04_DMA_MicroSD.ioc
@@ -69,21 +69,20 @@ Mcu.Pin27=PC12
 Mcu.Pin28=PD2
 Mcu.Pin29=PB3
 Mcu.Pin3=PH1-OSC_OUT
-Mcu.Pin30=PB4
-Mcu.Pin31=PB5
-Mcu.Pin32=PB8
-Mcu.Pin33=PB9
-Mcu.Pin34=VP_FATFS_VS_Generic
-Mcu.Pin35=VP_SYS_VS_Systick
-Mcu.Pin36=VP_TIM3_VS_ClockSourceINT
-Mcu.Pin37=VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS
+Mcu.Pin30=PB5
+Mcu.Pin31=PB8
+Mcu.Pin32=PB9
+Mcu.Pin33=VP_FATFS_VS_Generic
+Mcu.Pin34=VP_SYS_VS_Systick
+Mcu.Pin35=VP_TIM3_VS_ClockSourceINT
+Mcu.Pin36=VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS
 Mcu.Pin4=PC0
 Mcu.Pin5=PC1
 Mcu.Pin6=PC2
 Mcu.Pin7=PC3
 Mcu.Pin8=PA0-WKUP
 Mcu.Pin9=PA2
-Mcu.PinsNb=38
+Mcu.PinsNb=37
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F722RETx
@@ -165,12 +164,10 @@ PB2.Signal=GPIO_Output
 PB3.Locked=true
 PB3.Mode=Full_Duplex_Master
 PB3.Signal=SPI3_SCK
-PB4.Locked=true
-PB4.Signal=S_TIM3_CH1
-PB5.GPIOParameters=GPIO_Label
-PB5.GPIO_Label=ADS_CLK
+PB5.GPIOParameters=GPIO_Speed
+PB5.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
 PB5.Locked=true
-PB5.Signal=GPIO_Output
+PB5.Signal=S_TIM3_CH2
 PB8.GPIOParameters=GPIO_Label
 PB8.GPIO_Label=ADS_SYNC_RST
 PB8.Locked=true
@@ -324,8 +321,8 @@ SH.GPXTI4.0=GPIO_EXTI4
 SH.GPXTI4.ConfNb=1
 SH.GPXTI9.0=GPIO_EXTI9
 SH.GPXTI9.ConfNb=1
-SH.S_TIM3_CH1.0=TIM3_CH1,PWM Generation1 CH1
-SH.S_TIM3_CH1.ConfNb=1
+SH.S_TIM3_CH2.0=TIM3_CH2,PWM Generation2 CH2
+SH.S_TIM3_CH2.ConfNb=1
 SPI1.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_32
 SPI1.CalculateBaudRate=1.5 MBits/s
 SPI1.DataSize=SPI_DATASIZE_8BIT
@@ -349,8 +346,8 @@ SPI3.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,DataSize,BaudRate
 SPI3.Mode=SPI_MODE_MASTER
 SPI3.VirtualType=VM_MASTER
 TIM3.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
-TIM3.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
-TIM3.IPParameters=Channel-PWM Generation1 CH1,AutoReloadPreload,Period
+TIM3.Channel-PWM\ Generation2\ CH2=TIM_CHANNEL_2
+TIM3.IPParameters=AutoReloadPreload,Period,Channel-PWM Generation2 CH2
 TIM3.Period=32
 USB_DEVICE.CLASS_NAME_FS=CDC
 USB_DEVICE.IPParameters=VirtualMode-CDC_FS,VirtualModeFS,CLASS_NAME_FS
